style: :bug: alignments

--- a/src/Components/products/style.module.scss
+++ b/src/Components/products/style.module.scss
@@ -15,8 +15,8 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap !important;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     padding: 0;
     height: calc(100vh - 220px);
     overflow-y: auto;
